k8s/platform/media-stack/deployments/flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      nodeSelector:
        kubernetes.io/hostname: sf-y530
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          ports:
            - containerPort: 8191
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media-stack
spec:
  selector:
    app: flaresolverr
  ports:
    - port: 8191
      targetPort: 8191
