k8s/platform/media-stack/deployments/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: sf-y530
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: media-base
              mountPath: /config
              subPath: bazarr-config
            - name: media-base
              mountPath: /data
      volumes:
        - name: media-base
          persistentVolumeClaim:
            claimName: media-base
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media-stack
spec:
  selector:
    app: bazarr
  ports:
    - port: 6767
      targetPort: 6767
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media-stack
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Bazarr
    gethomepage.dev/description: Subtitle automation
    gethomepage.dev/group: Media
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/href: http://bazarr.sfl
    gethomepage.dev/siteMonitor: http://bazarr.sfl
    gethomepage.dev/external: "true"
    gethomepage.dev/weight: "50"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bazarr.sfl`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
