k8s/platform/media-stack/deployments/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: sf-y530
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: media-base
              mountPath: /config
              subPath: config
            - name: media-base
              mountPath: /media
              subPath: media
      volumes:
        - name: media-base
          persistentVolumeClaim:
            claimName: media-base
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media-stack
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media-stack
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/description: Movies and TV streaming
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/href: http://jellyfin.sfl
    gethomepage.dev/siteMonitor: http://jellyfin.sfl
    gethomepage.dev/external: "true"
    gethomepage.dev/weight: "10"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.sfl`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
